--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,9 +294,23 @@ html, body {
     margin: 15px 0 40px;
     width: 100px;
 }
+.img-lines1 {
+    width: 100px;
+}
+.img-lines2 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+ 
+    width: 100%;
+}
+.section-portfolio2 .sql{
+    margin-top: 30px;
+}
 .section-about{
     padding-bottom: 100px;
 }
+
 .site-section p {
     margin-bottom: 35px;
     font-size: 30px;
